Update_김종민_실시간 대응
[Update]
+ Add : 대응 프로그램(Python3.5 Ubuntu 기반)
+ Add : 대응 전략
+ Update : 대응 모듈
+ Update : API 서버
+ Update : DB 구성

--- a/김종민_실시간 대응/API Server/package.json
+++ b/김종민_실시간 대응/API Server/package.json
@@ -18,11 +18,15 @@
     "cuid": "^2.1.1",
     "date-utils": "^1.2.21",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "formidable": "^1.2.2",
+    "fs-extra": "^9.1.0",
     "http": "0.0.0",
     "iconv-lite": "^0.4.24",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.4.0",
     "logger": "0.0.1",
+    "mkdirp": "^1.0.4",
     "mysql": "^2.16.0",
     "nodemailer": "^4.6.7",
     "nodemailer-smtp-pool": "^2.8.3",
